# clinico-omics-deployer

./: .gitignore  .gitmodules  README.md  config.yml  config.yml.template  deployer  download-plugins  pyproject.toml  requirements.txt
auth/: .gitignore  docker-compose.yml.template  env.example
auth/config/: realm-export.json.template
auth/nginx/: auth.conf  cors.conf  frontend.conf  http.conf  locations.conf  nginx.conf  proxy_params
clinico-omics/: docker-compose.yml  docker-compose.yml.template  tservice-conf.edn.example
clinico-omics-auth/: .gitignore  README.md  docker-compose.yml  docker-compose.yml.template  init-keycloak.sh
clinico-omics-auth/nginx/: auth.conf  frontend.conf  https.conf  locations.conf  nginx.conf  (+3 more)
clinico-omics-core/: datains-conf.edn.example  dataseq-core-conf.edn.example  docker-compose.yml  docker-compose.yml.template  download-plugins  tservice-conf.edn.example  tservice.env.example
cromwell/: README.md  cromwell-local.conf  docker-compose.yml
database/: docker-compose.yml.template
datains/: datains.env.example  docker-compose.yml  mongodb.env.example  postgres.env.example
metabase/: .env  .gitignore  Makefile  README.md  docker-compose.yml
monitoring/: README.md  docker-compose.yml
openspecimen/: docker-compose.yml  mysqld.conf
shiny-server/: .gitignore  Makefile  build.sh  docker-compose.yml
st2-docker/: .gitignore  README.md  docker-compose.yml
tservice/: docker-compose.yml  tservice.env.example
yapi/: .gitignore  Dockerfile  Makefile  README.md  build.sh  config.json  docker-compose.yml  entrypoint.sh
(+42 files in other folders)
