[tool.poetry]
name = "compose-services"
version = "0.1.0"
description = "Docker compose for all sub-systems of clinico-omics platform."
authors = ["YJC <yjcyxky@163.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Jinja2 = "^2.11.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
